refactor(codestyle): try to pass checks