@@ -12,7 +12,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -24,7 +23,7 @@ public class CourseService {
     public List<CourseResponse> getAll() {
         return courseRepository.findByActiveTrue().stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CourseResponse getById(UUID id) {
